<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/log_title"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/logLineText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:ems="10"
        android:hint="@string/log_line_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/logCategoryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/logLineText"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/log_category_hint"
        android:text="@string/log_default_category" />

    <Spinner
        android:id="@+id/logSeveritySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@+id/logCategoryText"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="10dp"
        android:entries="@array/log_severity"
        android:prompt="@string/log_severity_prompt" />
    
    <Button
        android:id="@+id/logButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logSeveritySpinner"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/log_button_text" />

</RelativeLayout>