<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/notif_title"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <EditText
        android:id="@+id/channelText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/notif_channel_hint" />
    
    <Button
        android:id="@+id/subscribeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/channelText"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/sub_button_text" />
    
    <Button
        android:id="@+id/unsubscribeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subscribeButton"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/unsub_button_text" />
    
    <EditText
        android:id="@+id/notifText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/unsubscribeButton"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/notif_hint" />
    
    <Button
        android:id="@+id/pushNotifButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notifText"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/push_notif_button_text" />

</RelativeLayout>