<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/settings_title"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <EditText
        android:id="@+id/appCodeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/app_code_hint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/appUniqText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appCodeText"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:ems="10"
        android:hint="@string/app_uniq_hint" />

    <EditText
        android:id="@+id/appPwdText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appUniqText"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:ems="10"
        android:hint="@string/app_pwd_hint"
        android:inputType="textPassword" />
    
    <EditText
        android:id="@+id/c2dmText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appPwdText"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:ems="10"
        android:hint="@string/c2dm_hint" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/c2dmText"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/save_button_text" />

</RelativeLayout>