<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/functions_title"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <EditText
        android:id="@+id/functionCodeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:hint="@string/function_hint" />
    
    <Button
        android:id="@+id/callFunctionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/functionCodeText"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/call_function_button_text" />
    
    <Button
        android:id="@+id/callAppletButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/callFunctionButton"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/call_applet_button_text" />

</RelativeLayout>